# ajf-linked-in-scraper

./: .gitignore  README.md  pyproject.toml
linked_in_scraper/: main.py
